tests/contract/snapshots/contract__recall__recall_empty_recent.snap
---
source: tests/contract/recall.rs
expression: "recall(&s, &[])"
---
No memories recorded yet. Use `sara learn "..."` to save one.
