tests/contract/snapshots/contract__recall__recall_empty_tag.snap
---
source: tests/contract/recall.rs
expression: "recall(&s, &[\"--tag\", \"nope\"])"
---
No memories recorded yet. Use `sara learn "..."` to save one.
