tests/contract/snapshots/contract__recall__recall_linked_task.snap
---
source: tests/contract/recall.rs
expression: "recall(&s, &[\"tokio timeout\"])"
---
Note: Keyword-match only (literal FTS). Paraphrased or conceptually similar content with different wording may not appear.
Keyword matches:
  [item_memory] ~ m4 flaky build was caused by a tokio timeout in the integration harness: flaky build was caused by a tokio timeout in the integration harness [via tasks: #1 Fix flaky build (explicit)] (just now)
